Wed Mar 10 09:00:40 2021  Rob Lauer  <rlauer6@comcast.net>

	[gitignore]:
	* .gitignore: *.pyc

Mon Mar  8 10:47:10 2021  Rob Lauer  <rlauer6@comcast.net>

	[lambda stub]:
	* makala/lambda_config.py
	(gnerate_lambda_stub): new
	* makala/data/lambda.py: new
	* VERSION: bump
	* setup.py: +data/lambda.py
	* makala/makala.py
	(main): generate_lambda_stub()

	[s3:source_account]:
	* makala/makala.py
	(main): only add source_account for S3

Fri Feb 26 16:10:51 2021  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/Makefile.jinja2
	- export AWS_PROFILE since not all commands take --profile

Tue Feb 23 18:28:25 2021  Rob Lauer  <rlauer6@comcast.net>

	* makala/data/terraform.jinja2
	- do not include aws_lambda_permission if no principal specified

Tue Feb 23 14:49:06 2021  Rob Lauer  <rlauer6@comcast.net>

	* README: typo

	[LOG_LEVEL]:
	* makala/makala.py
	- LOG_LEVEL should always be tested in uppercase
	* makala/lambda_config.py
	- likewise, upper case environment variable LOG_LEVEL

	[profile]:
	* makala/lambda_config.py
	- add profile to validated_config for rendering
	* makala/data/Makefile.jinja2
	- add --profile to all "aws" cli commands

	[terraform exception]:
	* makala/makala.py
	- set vpc member if not present to prevent jinja2 exception

Mon Feb 15 15:53:12 2021  Rob Lauer  <rlauer6@comcast.net>

	[utils.py]:
	* makala/makala/utils.py
	(get_private_subnet_ids): DestinationCidrBlock may not exist
	* Makefile: PROJECT_NAME, PACKAGE_NAME
	* .gitignore: lib, bin, lib64
	* requirements.txt: -setuptools, -wheel

Tue Oct 20 18:27:13 2020  Rob Lauer  <rlauer6@comcast.net>

	[requirements.txt]:
	* makala/data/Makefile.jinja2
	- which python, which pip
	- add dependency on requirements.txt for zipfile
	* requirements.txt: new

	[source_arn]:
	* makala/data/Makefile.jinja2
	- only add source-arn, source-account if present

	[terraform]:
	* README.md: document terraform creation
	* makala/data/Makefile.jinja2
	- add source_arn, source_account